fixed problem where page was wider on smaller screens

--- a/code/public/styles/home.scss
+++ b/code/public/styles/home.scss
@@ -1,5 +1,7 @@
 
 .App{
+    max-width: 100vw;
+    overflow-x: hidden;
     video{
         width: 100vw;
         height: 100vh;
